# doublechat

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  server.js  vite.config.js
.github/workflows/: release.yml
public/: app.js  index.html  manifest.json  style.css
scripts/: copy-release.mjs  release.mjs  setup-certs.js
src/: main.js  style.css
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/_old/: source.ai
src-tauri/src/: lib.rs  main.rs  mdns.rs  signaling.rs
