[package]
name = "doublechat"
version = "0.2.0"
edition = "2021"

[lib]
name = "doublechat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
tauri-plugin-dialog  = "2"
tauri-plugin-process = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
tokio-tungstenite  = "0.24"
futures-util       = "0.3"
local-ip-address   = "0.6"
mdns-sd            = "0.11"
